Fix integ tests.